text wrap fixed

--- a/client/app/(letterbookd)/books/(bookTiles)/bookTile.css
+++ b/client/app/(letterbookd)/books/(bookTiles)/bookTile.css
@@ -6,11 +6,15 @@
 	gap: 5px;
 
 	text-align: center;
+    white-space: nowrap;
+    overflow: hidden;
+	text-overflow: ellipsis;
 
 
 	border: 1px solid green;
 	background-color: #eeffee;
 }
+
 
 .book-tile-img {
 	max-width: 10rem;
